--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^1.13",
         "dompdf/dompdf": "^1.2",
+        "league/commonmark": "^2.3",
+        "league/html-to-markdown": "^5.1",
         "phpoffice/phpspreadsheet": "^1.23",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
@@ -21,7 +23,9 @@
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^3.0"
+        "twig/markdown-extra": "^3.4",
+        "twig/twig": "^3.0",
+        "webuni/front-matter": "^1.3"
     },
     "config": {
         "allow-plugins": {
