--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
         }
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.9",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
