Amélioration de l'environnement

--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ APP_ENV=dev
 APP_SECRET=138629d82be29d322c8629b53e6ef731
 ###< symfony/framework-bundle ###
 
+FILE_DATA=public/data/essence/
 FILE_MD=public/pages/
+FILE_TEST=public/test
