--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ yarn-error.log
 ###< Others ###
 .idea
 ###< Others ###
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
